깃허브 정리

--- a/Git Stu/깃허브 정리.md
+++ b/Git Stu/깃허브 정리.md
@@ -80,3 +80,10 @@ git branch -d (삭제할 브랜치명)
 2. 원격 브랜치 삭제
 git push origin :(삭제할 브랜치명)
 ```
+
+> 브랜치 병합
+```
+git merge (병합 할 브랜치)
+
+# 내가 병합을 할 브랜치로 checkout한후 병합 당할 브랜치를 merge 뒤에 명시해준다.
+```
